<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.lehigh.cse216.grw224.MainActivity">
    <item
        android:id="@+id/action_home"
        android:orderInCategory="1"
        android:title="Home"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="2"
        android:title="New Comment"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="3"
        android:title="View Profile"
        />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="4"
        android:title="Logout" />
</menu>